@@ -1,4 +1,4 @@
-GNU cpio NEWS -- history of user-visible changes. 2014-01-30
+GNU cpio NEWS -- history of user-visible changes. 2014-12-01
 Copyright (C) 2003, 2004, 2005, 2006, 2007, 2009,
 2010, 2014 Free Software Foundation, Inc.
 See the end of file for copying conditions.
@@ -9,7 +9,18 @@ Version 2.11.90 - Git
 
 * Improved documentation.
 * Manpages are installed by make install.
+* New options for copy-out mode:
 
+** --ignore-devno
+Store 0 in the device number fields, instead of the actual device
+number.
+
+** --renumber-inodes
+Renumber inodes when storing them in the archive.
+
+** --device-independent or --reproducible
+Create reproducible archives.  This is equivalent to 
+--ignore-devno --renumber-inodes.
 
 Version 2.11 - Sergey Poznyakoff, 2010-03-10
 
